# fall-detection-data-handler

./: .env.local  .env.production  .env.production.template  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  LOCAL_DEPLOYMENT.md  MULTI_USER_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT.md  README.md  TAURI_CONVERSION.md  debug-routes.sh  deploy-local-v2.sh  deploy-local.sh  deploy.sh  dev.bat  dev.sh  docker-compose.local.yml  docker-compose.yml  fix-backend-upload.sh  image_server.py  nginx.conf  pyproject.toml  quick-start.sh  run-local-production.sh  run-simple.bat  run.bat  run.sh  stop-local-production.sh  test_image_server.py  test_normalize.py  test_video_status.py
.claude/: .nfs000000000ddfb2ef000016cc  settings.local.json
backend/: .env.example  add_analytics_columns.py  backup_database.py  cleanup_duplicates.sql  config.py  create_admin.py  create_test_videos.py  fix_all_database_issues.py  list_routes.py  migrate.py  production_checklist.py  remove_default_users.py  requirements.txt  restore_database.py  run.py  run_migrations.py  server_config.py.template  update_frontend_urls.py
backend/app/: __init__.py  api_routes.py  auth.py  blueprints.py  models.py  normalization_progress.py  routes.py  (+7 more)
docs/: Falls Labeling Software Design Spec.txt  Falls Labeling Software Project Sheet.txt
fall-detection-tauri/: package-lock.json  package.json  vite.config.ts
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
scripts/: WINDOWS_SETUP.md  backup-cron.sh  start-all.bat  start-backend.bat  start-frontend.bat
(+190 files in other folders)
